refactor: improve layout

--- a/bs-admin/index.html
+++ b/bs-admin/index.html
@@ -114,8 +114,8 @@
       }
     </style>
   </head>
-  <body class="d-flex vh-100">
-    <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top shadow">
+  <body class="d-flex flex-column vh-100">
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark shadow">
       <div class="container-fluid">
         <a href="#" class="navbar-brand d-none d-md-block">
           <i class="bi bi-bootstrap-fill"></i> Dashboard
@@ -187,7 +187,7 @@
       </div>
     </nav>
 
-    <div class="d-flex flex-grow-1 overflow-hidden" style="padding-top: 3.5rem">
+    <div class="d-flex flex-grow-1 overflow-hidden">
       <aside class="bg-dark-subtle position-relative shadow">
         <div class="offcanvas-md offcanvas-start h-100 overflow-hidden overflow-y-auto" tabindex="-1" aria-labelledby="sidebarMenuLabel">
           <div class="offcanvas-body d-md-flex flex-column p-2">
@@ -298,6 +298,8 @@
       </aside>
 
       <main class="flex-grow-1 overflow-auto p-3">
+        <div class="bg-dark-subtle mb-2" style="width: 1920px">Test Horizontal scroll bar</div>
+
         <h1>欢迎来到管理后台！</h1>
         <p>这里是你的主要内容区域。</p>
         <h1>欢迎来到管理后台！</h1>
