--- a/bs-admin/index.html
+++ b/bs-admin/index.html
@@ -45,6 +45,7 @@
         border-radius: var(--bs-border-radius);
         display: flex;
         align-items: center;
+        margin-bottom: .25rem;
         padding: .5rem .75rem;
         text-decoration: none;
         white-space: nowrap !important;
