style: Using me-2 replace gap style

--- a/bs-admin/index.html
+++ b/bs-admin/index.html
@@ -49,7 +49,6 @@
         padding: .5rem .75rem;
         text-decoration: none;
         white-space: nowrap !important;
-        gap: .5rem;
       }
 
       /** level => 2/3 */
@@ -139,18 +138,18 @@
             </a>
             <ul class="dropdown-menu dropdown-menu-end position-absolute shadow">
               <li>
-                <a role="button" class="dropdown-item d-flex align-items-center gap-2" data-bs-theme-value="light">
-                  <i class="bi bi-sun-fill"></i> Light
+                <a role="button" class="dropdown-item d-flex align-items-center" data-bs-theme-value="light">
+                  <i class="bi bi-sun-fill me-2"></i> Light
                 </a>
               </li>
               <li>
-                <a role="button" class="dropdown-item d-flex align-items-center gap-2" data-bs-theme-value="dark">
-                  <i class="bi bi-moon-stars-fill"></i> Dark
+                <a role="button" class="dropdown-item d-flex align-items-center" data-bs-theme-value="dark">
+                  <i class="bi bi-moon-stars-fill me-2"></i> Dark
                 </a>
               </li>
               <li>
-                <a role="button" class="dropdown-item d-flex align-items-center gap-2" data-bs-theme-value="auto">
-                  <i class="bi bi-circle-half"></i> Auto
+                <a role="button" class="dropdown-item d-flex align-items-center" data-bs-theme-value="auto">
+                  <i class="bi bi-circle-half me-2"></i> Auto
                 </a>
               </li>
             </ul>
@@ -162,24 +161,24 @@
             </a>
             <ul class="dropdown-menu dropdown-menu-end position-absolute shadow">
               <li>
-                <a href="#" class="dropdown-item d-flex align-items-center gap-2">
-                  <i class="bi bi-plus-lg"></i> New project
+                <a href="#" class="dropdown-item d-flex align-items-center">
+                  <i class="bi bi-plus-lg me-2"></i> New project
                 </a>
               </li>
               <li>
-                <a href="#" class="dropdown-item d-flex align-items-center gap-2">
-                  <i class="bi bi-gear"></i> Settings
+                <a href="#" class="dropdown-item d-flex align-items-center">
+                  <i class="bi bi-gear me-2"></i> Settings
                 </a>
               </li>
               <li>
-                <a href="#" class="dropdown-item d-flex align-items-center gap-2">
-                  <i class="bi bi-person-lines-fill"></i> Profile
+                <a href="#" class="dropdown-item d-flex align-items-center">
+                  <i class="bi bi-person-lines-fill me-2"></i> Profile
                 </a>
               </li>
               <li><hr class="dropdown-divider"></li>
               <li>
-                <a href="#" class="dropdown-item d-flex align-items-center gap-2">
-                  <i class="bi bi-box-arrow-right"></i> Sign out
+                <a href="#" class="dropdown-item d-flex align-items-center">
+                  <i class="bi bi-box-arrow-right me-2"></i> Sign out
                 </a>
               </li>
             </ul>
@@ -195,7 +194,7 @@
             <ul id="collapse-root">
               <li>
                 <a href="#collapse-dashboard" data-bs-toggle="collapse" aria-expanded="true">
-                  <i class="bi bi-speedometer"></i>
+                  <i class="bi bi-speedometer me-2"></i>
                   <span class="text-truncate">仪表盘</span>
                 </a>
                 <ul id="collapse-dashboard" class="collapse show" data-bs-parent="#collapse-root">
@@ -206,7 +205,7 @@
               </li>
               <li>
                 <a href="#collapse-form" data-bs-toggle="collapse" aria-expanded="false">
-                  <i class="bi bi-pencil-square"></i>
+                  <i class="bi bi-pencil-square me-2"></i>
                   <span class="text-truncate">表单页</span>
                 </a>
                 <ul id="collapse-form" class="collapse" data-bs-parent="#collapse-root">
@@ -217,7 +216,7 @@
               </li>
               <li>
                 <a href="#collapse-list" data-bs-toggle="collapse" aria-expanded="false">
-                  <i class="bi bi-grid"></i>
+                  <i class="bi bi-grid me-2"></i>
                   <span class="text-truncate">列表页</span>
                 </a>
                 <ul id="collapse-list" class="collapse" data-bs-parent="#collapse-root">
@@ -238,7 +237,7 @@
               </li>
               <li>
                 <a href="#collapse-detail" data-bs-toggle="collapse" aria-expanded="false">
-                  <i class="bi bi-card-list"></i>
+                  <i class="bi bi-card-list me-2"></i>
                   <span class="text-truncate">详情页</span>
                 </a>
                 <ul id="collapse-detail" class="collapse" data-bs-parent="#collapse-root">
@@ -248,7 +247,7 @@
               </li>
               <li>
                 <a href="#collapse-result" data-bs-toggle="collapse" aria-expanded="false">
-                  <i class="bi bi-check-circle"></i>
+                  <i class="bi bi-check-circle me-2"></i>
                   <span class="text-truncate">结果页</span>
                 </a>
                 <ul id="collapse-result" class="collapse" data-bs-parent="#collapse-root">
@@ -258,7 +257,7 @@
               </li>
               <li>
                 <a href="#collapse-exception" data-bs-toggle="collapse" aria-expanded="false">
-                  <i class="bi bi-exclamation-circle"></i>
+                  <i class="bi bi-exclamation-circle me-2"></i>
                   <span class="text-truncate">异常页</span>
                 </a>
                 <ul id="collapse-exception" class="collapse" data-bs-parent="#collapse-root">
@@ -269,7 +268,7 @@
               </li>
               <li>
                 <a href="#collapse-user" data-bs-toggle="collapse" aria-expanded="false">
-                  <i class="bi bi-person-circle"></i>
+                  <i class="bi bi-person-circle me-2"></i>
                   <span class="text-truncate">个人页</span>
                 </a>
                 <ul id="collapse-user" class="collapse" data-bs-parent="#collapse-root">
@@ -279,13 +278,13 @@
               </li>
               <li>
                 <a href="#">
-                  <i class="bi bi-question-circle"></i>
+                  <i class="bi bi-question-circle me-2"></i>
                   <span class="text-truncate">关于我们</span>
                 </a>
               </li>
               <li>
                 <a href="#">
-                  <i class="bi bi-question-circle"></i>
+                  <i class="bi bi-question-circle me-2"></i>
                   <span class="text-truncate">Test text truncate truncatetruncatetruncate</span>
                 </a>
               </li>
