--- a/bs-admin/index.html
+++ b/bs-admin/index.html
@@ -69,7 +69,7 @@
 
       aside .offcanvas-md ul a:hover,
       aside .offcanvas-md ul a:focus,
-      aside .offcanvas-md ul .current a {
+      aside .offcanvas-md ul .current > a:not([data-bs-toggle]) {
         background-color: var(--bs-secondary-bg);
       }
 
@@ -118,7 +118,7 @@
     <nav class="navbar navbar-expand-md navbar-dark bg-dark shadow">
       <div class="container-fluid">
         <a href="#" class="navbar-brand d-none d-md-block">
-          <i class="bi bi-bootstrap-fill"></i> Dashboard
+          <i class="bi bi-bootstrap-fill me-2"></i>Dashboard
         </a>
         <button class="navbar-toggler d-md-none px-2" type="button" data-bs-toggle="offcanvas" data-bs-target="aside .offcanvas-md" aria-controls="sidebarMenu" aria-expanded="false" aria-label="Toggle Sidebar">
           <span class="navbar-toggler-icon"></span>
@@ -192,7 +192,7 @@
         <div class="offcanvas-md offcanvas-start h-100 overflow-hidden overflow-y-auto" tabindex="-1" aria-labelledby="sidebarMenuLabel">
           <div class="offcanvas-body d-md-flex flex-column p-2">
             <ul id="collapse-root">
-              <li>
+              <li class="current">
                 <a href="#collapse-dashboard" data-bs-toggle="collapse" aria-expanded="true">
                   <i class="bi bi-speedometer me-2"></i>
                   <span class="text-truncate">仪表盘</span>
