refactor: remove invalid class

--- a/bs-admin/index.html
+++ b/bs-admin/index.html
@@ -136,7 +136,7 @@
             <a role="button" class="nav-link px-2" data-bs-toggle="dropdown" aria-expanded="false">
               <i class="bi bi-sun-fill"></i>
             </a>
-            <ul class="dropdown-menu dropdown-menu-end position-absolute shadow">
+            <ul class="dropdown-menu dropdown-menu-end shadow">
               <li>
                 <a role="button" class="dropdown-item d-flex align-items-center" data-bs-theme-value="light">
                   <i class="bi bi-sun-fill me-2"></i> Light
@@ -159,7 +159,7 @@
               <img src="https://github.com/mdo.png" width="24" height="24" class="rounded-circle me-2">
               Siganushka
             </a>
-            <ul class="dropdown-menu dropdown-menu-end position-absolute shadow">
+            <ul class="dropdown-menu dropdown-menu-end shadow">
               <li>
                 <a href="#" class="dropdown-item d-flex align-items-center">
                   <i class="bi bi-plus-lg me-2"></i> New project
